[metadata]
name = aeria
version = 0.0.1
description = Visualized social web explorer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/afuturemodern/aeria
author = afuturemodern
author_email =
license = BSD 3-Clause
license_file = LICENSE
keywords = utilities soundcloud social
project_urls =
    Documentation = https://github.com/afuturemodern/aeria
    Source = https://github.com/afuturemodern/aeria
    Tracker = https://github.com/afuturemodern/aeria/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    networkx>=1.10
    psutil>=4.1
    py2neo>=2.0
    requests>=2.9
    soundcloud>=0.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aeria = aeria.cli:cli

[build_sphinx]
project = aeria
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
